--- a/views/team.jade
+++ b/views/team.jade
@@ -31,7 +31,7 @@ block inlineScripts
 				$('#draftBudget').text("2014 Draft Budget: " + curBudget);
 			}
 		};
-		var saveChanges = function(name) {
+		var saveChanges = function(teamId) {
 			if($('.player[minor_leaguer="true"]').find('input:checked').length > 10) {
 				alert("You cannot keep more than 10 minor leaguers. " + 
 					"Deselect one or click 'Keep as major leaguer' to keep the player for a starting salary of 3 units");
@@ -42,7 +42,7 @@ block inlineScripts
 					"Deselect one and try again");
 				return;
 			}
-			var payload = { team: name, total : 0, keepers: [], nonkeepers: [] };
+			var payload = { team: teamId, total : 0, keepers: [], nonkeepers: [] };
 			payload.total = parseInt($('#draftBudget').text().split(":")[1]);
 			var players = $('.player');
 			for(var i = 0; i < players.length; i++) {
@@ -65,6 +65,7 @@ block content
 	include partials/team
 	include partials/draftPicks
 	include partials/cash
+	include partials/teamLink
 
 	mixin vulture(array, header, isInbound)
 		-if(array.length > 0)
@@ -83,11 +84,11 @@ block content
 							td= v.name_display_first_last
 							td
 								-if(isInbound)
-									a(href="/team/" + v.vulture.vulture_team)= v.vulture.vulture_team
+									mixin teamLink(teamHash[v.vulture.vulture_team], false)
 								-else
-									a(href="/team/" + v.history[0].fantasy_team)= v.history[0].fantasy_team
+									mixin teamLink(teamHash[v.history[0].fantasy_team], false)
 							td= moment(v.vulture.deadline).format('h:mm a [EST], M/D')
-							-if(isInbound && user && user.team == team.team)
+							-if(isInbound && user && user.team == team.teamId)
 								td
 									a(href="/gm/vulture/fix/" + v.player_id) Click to Fix
 
@@ -100,16 +101,16 @@ block content
 		= config.historicalPage
 		div
 			p Last Year's Roster:
-				a(style="padding-left:20px" href="/team/" + team.team + "/2013") 2013
+				a(style="padding-left:20px" href="/team/" + team.teamId + "/2013") 2013
 			-var nextYear = parseInt(config.year) + 1
 			-if(config.isKeeperPeriod && config.isTeamOwner)
 				h3= "Select your keepers from " + config.year + " roster"
 				p#draftBudget(style="display:inline;font-size:20px;margin-right:40px")=nextYear + ' Draft Budget: ' + draftCash.value
 				
 				-if(config.isTeamOwner)
-					input.saveChanges(style="line-height:50%" type="button" value="Save Keeper Selections" onclick="saveChanges('" + team.team + "')")
+					input.saveChanges(style="line-height:50%" type="button" value="Save Keeper Selections" onclick="saveChanges('" + team.teamId + "')")
 
-			-if(!config.isKeeperPeriod || (user != null && user.team == team.team))
+			-if(!config.isKeeperPeriod || config.isTeamOwner)
 				mixin team(players, true, config)
 			-else
 				p= "Check back after the keeper deadline for " + nextYear + " roster"
