--- a/views/vulture.jade
+++ b/views/vulture.jade
@@ -12,8 +12,8 @@ block inlineScripts
 			$("#player_" + player + "_message").append("<tr><td>" + message + "</td></tr>");
 		});
 
-		var fix = function(player_id) {
-			$.post('/gm/vulture/fix/' + player_id, function(data) {
+		var fix = function(_id) {
+			$.post('/gm/vulture/fix/' + _id, function(data) {
 				console.log('data');
 			});
 		}
@@ -26,7 +26,7 @@ block content
 	=	"user.user='" + user.team + "';"
 	| </script>
 
-	-if(!isVultureOn && (user != null && user.role != 'admin'))
+	-if(!isVultureOn)
 		section(id="top")
 			h2 Vulture
 			h3 Come back after the start of the season to see vultures.
@@ -47,7 +47,8 @@ block content
 					tbody
 						-each player in openVultures
 								tr
-									td= player.name_display_first_last
+									td
+										a.hiddenLink(href="/player/" + player._id)= player.name_display_first_last
 									td
 										mixin teamLink(teamHash[player.history[0].fantasy_team], false)
 									td
@@ -72,8 +73,10 @@ block content
 						-each player in vulturablePlayers
 							-if(player.history[0].fantasy_team == user.team)
 								tr
-									td= player.name_display_first_last
-									td= player.history[0].fantasy_team
+									td
+										a.hiddenLink(href="/player/" + player._id)= player.name_display_first_last
+									td
+										mixin teamLink(teamHash[player.history[0].fantasy_team], false)
 									td.status= player.status_code
 									td.status= player.fantasy_status_code
 									td
@@ -91,11 +94,13 @@ block content
 					-each player in vulturablePlayers
 						-if(!user || player.history[0].fantasy_team != user.team)
 							tr
-								td= player.name_display_first_last
-								td= player.history[0].fantasy_team
+								td
+									a.hiddenLink(href="/player/" + player._id)= player.name_display_first_last
+								td
+									mixin teamLink(teamHash[player.history[0].fantasy_team], false)
 								td.status
 									= player.status_code
 								td.status
 									= player.fantasy_status_code
 								td
-									a(href="/gm/vulture/" + player.player_id) Vulture
+									a(href="/gm/vulture/" + player._id) Vulture
