--- a/views/playerList.jade
+++ b/views/playerList.jade
@@ -16,8 +16,8 @@ block inlineScripts
 						.css('display','')
 						.find('a.name').attr('href', '/player/' + p._id).text(p.name_display_first_last);
 					newRow.find('a.hiddenLink').text(
-						p.history[0] != undefined && p.history[0].fantasy_team != 'FA' ? p.history[0].fantasy_team : '-')
-						.attr('href', '/team' + p.history[0].fantasy_team);
+						p.history[0] != undefined && p.history[0].fantasy_team != 0 ? jsTeamHash[p.history[0].fantasy_team] : '-')
+						.attr('href', '/team/' + p.history[0].fantasy_team);
 					tableBody.append(newRow);
 				});
 			});			
@@ -25,6 +25,13 @@ block inlineScripts
 
 block content
 	include partials/teamLink
+
+	| <script type="text/javascript" />
+	= "var jsTeamHash = {};"
+	-for(var team in teamHash) {
+		= "jsTeamHash[" + teamHash[team].teamId + "] = '" + teamHash[team].team + "';"
+	-}
+	| </script>
 
 	section(id="top")
 		h2 Player Search
