--- a/views/admin.jade
+++ b/views/admin.jade
@@ -2,6 +2,9 @@ extends layout
 
 block inlineScripts
 	script.
+		var socket = io.connect('/');
+		socket.emit('join', user);
+
 		var getPlayers = function(searchString) {
 			var payload = { searchString: searchString };
 			$.post("/admin/player/search", payload, function(result) {
@@ -44,11 +47,27 @@ block inlineScripts
 			});
 		}
 
+		socket.on('message', function(data) {
+			alert(data.message);
+		});
+
+		var updateRoster40 = function() {
+			$.post('/admin/roster40', function(result) {
+				console.log(result);
+			});
+		};
+
 		$('#name').on('change', function() {
 			getPlayers($('#name').val());
 		});
 
 block content
+
+	| <script type='text/javascript'>
+	|	var user = {};
+	=	"user.user='" + user.team + "';"
+	| </script>
+
 	div
 		p= message
 	
@@ -107,6 +126,7 @@ block content
 			input(id="updateESPN" type="button" value="Update ESPN" onclick="updateESPN()")
 			input(id="updateStandings" type="button" value="Update ESPN Standings" onclick="updateESPNStandings()")
 			input(id="updateStats" type="button" value="Update MLB Stats" onclick="updateMLBStats()")
+			input(id="updateRoster40" type="button" value="Update 40-Man Rosters" onclick="updateRoster40()")
 		div
 			p Keepers
 			form(method="GET" action="/gm/keeper/finalize")
